Revision history for Perl extension CGI::Header.

0.60 (1.00-RC13) Jun 16th, 2013

  - Add examples/
  - mv lib/CGI/Header/Apache2.pm examples/lib/CGI/Header/Apache2.pm
  - CGI::Header::Apache2 isn't provided by this distribution.

0.59 (1.00-RC12) Jun 11th, 2013

  - Remove CGI::Header#redirect and location

0.58 (1.00-RC11) Jun 5th, 2013

  - CGI::Header::Apache2 updates request_rec->status_line properly

0.57 (1.00-RC10) Jun 1st, 2013

  - CGI::Header::Standalone is separated into CGI::Header::Adapter
    and Apache2. Apache1 is not available at this time.

0.56 (1.00-RC9) May 31st, 2013

  - finalize() prints to STDOUT using CGI#print

  [ROADMAP]

    CGI::Header::Standalone will be separated into CGI::Header::Apache1
    and Apache2. For example, CGI::Header::Apache2 inherits from
    CGI::Header::Adapter which is a base class for adapters.

0.55 (1.00-RC8) May 22nd, 2013

  - Add CGI::Header::Standalone again as the alternative to CGI::Header

0.54 (1.00-RC7) May 20th, 2013

  - Rename CGI::Header#as_string to "finalize" since CGI.pm's header()
    method returns an empty string in "mod_perl" environment
  - Remove CGI::Header::Standalone

0.53 (1.00-RC6) May 19th, 2013

  [DOCUMENTATION]

    - update EXAMPLES

0.52 (1.00-RC5) May 14th, 2013

  - Add tests for CGI::Header#clone. POD explains how CGI::Header copies
    its instances.
  - CGI::Header::Standalone#as_string removes CRLF from Status-Line properly.
  - Tests require Test::MockTime (Thanks to CPAN Testers)

0.51 (1.00-RC4) May 13th, 2013

  - Add CGI::Header::Standalone that doesn't depend on CGI.pm's
    header() method
  - Add clone() method to CGI::Header

0.50 (1.00-RC3) Apr 23rd, 2013

  - Tests don't depend on Test::Exception (Thanks to CPAN testers)

0.49 (RC-1.00) Apr 22nd, 2013

  - Remove rehash(). new() normalizes property names automatically.

0.48 (RC-1.00) Apr 20th, 2013

  - Add EXAMPLES to POD
  - Add tests for EXAMPLES
  - Tests require CGI::Simple